<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gestion de Posts</string>
    <string name="localizacion">Localización</string>
    <string name="titulo">Titulo</string>
    <string name="posts">Posts</string>
    <string name="texto_secundario">Texto Secundario</string>
    <string name="addcommentario">addCommentario</string>
    <string name="add_button">Add</string>
    <string name="user_id">User ID</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="add_post">Add Post</string>
    <string name="ajustes">Ajustes</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="update">Update</string>
    <string name="login">Login</string>
    <string name="listado">listado</string>
    <string name="listado_de_los_post_del_usuario">listado de los post del usuario</string>
    <string name="tus_posts">Tus Posts</string>
    <string name="boton">BOTON</string>
    <string name="des2">des2</string>
    <string name="search">SEARCH</string>
    <string name="des3">des2</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email2">Email</string>
    <string name="username2">Username</string>
    <string name="usuario">Usuario</string>
</resources>