<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mainFragment"
        android:contentDescription="@string/listado"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/posts"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/postUserFragment"
        android:contentDescription="@string/listado_de_los_post_del_usuario"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/tus_posts"
        app:showAsAction="always" />

    <item
        android:id="@+id/ajustesFragment"
        android:contentDescription="@string/ajustes"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/ajustes"
        app:showAsAction="always" />

</menu>