<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ajustes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pantallaAjustes.AjustesFragment">

    <TextView
        android:id="@+id/ajustesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajustes"
        android:textSize="@dimen/MediumText"
        app:layout_constraintBottom_toTopOf="@id/idUser"
        app:layout_constraintEnd_toEndOf="@id/idUser"
        app:layout_constraintStart_toStartOf="@id/idUser"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:minEms="10"
        app:layout_constraintBottom_toTopOf="@id/nameUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ajustesLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="text"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:minEms="10"
        app:layout_constraintBottom_toTopOf="@id/username"
        app:layout_constraintEnd_toEndOf="@id/idUser"
        app:layout_constraintStart_toStartOf="@id/idUser"
        app:layout_constraintTop_toBottomOf="@id/idUser">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:minEms="10"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintEnd_toEndOf="@id/nameUser"
        app:layout_constraintStart_toStartOf="@id/nameUser"
        app:layout_constraintTop_toBottomOf="@id/nameUser">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:minEms="10"
        app:layout_constraintBottom_toTopOf="@id/phone"
        app:layout_constraintEnd_toEndOf="@id/username"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:minEms="10"
        app:layout_constraintBottom_toTopOf="@id/website"
        app:layout_constraintEnd_toEndOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/website"
        android:minEms="10"
        app:layout_constraintBottom_toTopOf="@id/login_b"
        app:layout_constraintEnd_toEndOf="@id/phone"
        app:layout_constraintStart_toStartOf="@id/phone"
        app:layout_constraintTop_toBottomOf="@id/phone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/website"
        app:layout_constraintStart_toStartOf="@id/website"
        app:layout_constraintTop_toBottomOf="@id/website" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>