<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pantallaAdd.AddFragment">

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_post"
        android:textSize="@dimen/MediumText"
        app:layout_constraintBottom_toTopOf="@id/userId"
        app:layout_constraintEnd_toEndOf="@id/userId"
        app:layout_constraintStart_toStartOf="@id/userId"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_id"
        android:minEms="10"
        app:layout_constraintBottom_toTopOf="@id/idPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="text"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:minEms="10"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintEnd_toEndOf="@id/userId"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@id/userId"
        app:layout_constraintTop_toBottomOf="@id/userId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="text"
            android:textColorHint="#000000" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:minEms="10"
        app:layout_constraintBottom_toTopOf="@id/body"
        app:layout_constraintEnd_toEndOf="@id/idPost"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@id/idPost"
        app:layout_constraintTop_toBottomOf="@id/idPost">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#000000" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/body"
        android:minEms="10"
        app:layout_constraintBottom_toTopOf="@id/login_b"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#000000" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/body"
        app:layout_constraintStart_toStartOf="@id/body"
        app:layout_constraintTop_toBottomOf="@id/body" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>